# melnor-bluetooth

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  codecov.yml  melnor.py  pyproject.toml  test.py  test2.py
.github/workflows/: build.yml  release.yml  test.yml
melnor_bluetooth/: constants.py  device.py  scanner.py  valve.py
melnor_bluetooth/models/: frequency.py
melnor_bluetooth/parser/: battery.py  date.py  manufacturer.py
melnor_bluetooth/utils/: battery.py  date.py  formatter.py  lock.py
melnor_bt/: constants.py  valve.py
melnor_bt/parser/: battery.py
tests/: .flake8  constants.py  test_device_valves.py  test_frequency.py  test_melnor_bt.py  test_scanner.py
tests/__snapshots__/: test_device_valves.ambr
tests/parser/: test_battery copy.py  test_battery.py  test_date.py  test_manufacturer.py  test_parse_battery_value.py  test_valve_zone.py
tests/utils/: test_battery.py  test_date.py
