[tool.poetry]
name = "melnor-bluetooh"
version = "0.1.0"
description = "A small python library for discovery and interacting with Melnor, Aquastar, etc bluetooth water timers."
authors = ["Justin Vanderhooft <justinvdhooft@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Ignored files/directories
)/
'''

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
bleak = "^0.14.2"
tzdata = "^2022.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
freezegun = "^1.2.1"
