[tool.poetry]
authors = ["Justin Vanderhooft <justinvdhooft@gmail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "A small python library for discovery and interacting with Melnor, Eden, etc Bluetooth water timers."
keywords = [
    "bluetooth",
    "melnor",
    "home automation",
    "irrigation",
    "gardening"
]
license = "MIT"
name = "melnor-bluetooth"
readme = "README.md"
version = "0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Ignored files/directories
)/
'''

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
bleak = ">=0.15.1"
tzdata = ">=2022.1"
tzlocal = ">=4.1"
aioconsole = ">=0.4.1"
bleak-retry-connector = ">=1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
freezegun = "^1.2.1"
pytest-asyncio = "^0.18.3"
pytest-mockito = "^0.0.4"
mockito = "^1.3.0"
flake8 = "^4.0.1"
syrupy = "^1.7.4"

[tool.poetry-dynamic-versioning]
bump = false
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.pytest.ini_options]
asyncio_mode = 'auto'
